[package]
name = "charge-rs"
version = "0.1.0"
authors = ["Philipp Vollmer <philipp.vollmer@tngtech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version= "1.6.5", features=["attributes", "unstable"] }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version="0.2.22", features=["full"] }
serde = { version = "1.0.116", features = ["derive"] }
chrono = "0.4.19"