[package]
name = "charge-rs"
version = "0.1.0"
authors = ["Philipp Vollmer <briefe@kebes.de>"]
edition = "2018"

[dependencies]
async-std = { version= "1.6.5", features=["attributes", "unstable"] }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version="0.2.22", features=["full"] }
serde = { version = "1.0.116", features = ["derive"] }
chrono = "0.4.19"
structopt = "0.3"